Fixed noise background.  Renamed the stylesheets to styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <link href="/stylesheets/normalize.css?body=1" media="all" rel="stylesheet" type="text/css" />
       <link href="/stylesheets/bootstrap.min.css?body=1" media="all" rel="stylesheet" type="text/css" />
       <link href="/stylesheets/bootstrap-responsive.min.css?body=1" media="all" rel="stylesheet" type="text/css" />
-      <link href="/stylesheets/scaffolds.css?body=1" media="all" rel="stylesheet" type="text/css" />
+      <link href="/stylesheets/styles.css?body=1" media="all" rel="stylesheet" type="text/css" />
       <link href="/stylesheets/retina.css?body=1" media="all" rel="stylesheet" type="text/css" />
       <link href="/stylesheets/static_pages.css?body=1" media="all" rel="stylesheet" type="text/css" />
 
