Added drop shadow to the games section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
     </div>
 
-    <div class="games top-small-spacer bottom-small-spacer">
+    <div class="games top-small-spacer bottom-small-spacer shadowed">
         <div class="container">
             <div class="row">
                 <div class="span12 center">
@@ -140,23 +140,23 @@
                 </div>
 
                 <div class="span3">
-                    <p><span class="black">Saleem Dabbous</span> -</p>
-                    <p>In house artist, Co-founder</p>
-                    <p><span class="black">Nick Rudzicz</span> -</p>
-                    <p>In house artist</p>
-                    <p><span class="black">Bronson Zgeb</span> -</p>
-                    <p>In house artist, Co-founder</p>
-                    <p><span class="black">Sidney Shaw</span> -</p>
-                    <p>writer, collaborator</p>
+                    <p><span class="black">Saleem Dabbous</span> -<br>
+                    In house artist, Co-founder</p>
+                    <p><span class="black">Nick Rudzicz</span> -<br>
+                    In house artist</p>
+                    <p><span class="black">Bronson Zgeb</span> -<br>
+                    In house artist, Co-founder</p>
+                    <p><span class="black">Sidney Shaw</span> -<br>
+                    writer, collaborator</p>
                 </div>
 
                 <div class="span3">
-                    <p><span class="black">G.P. Lackey</span> -</p>
-                    <p>Artist in residence</p>
-                    <p><span class="black">Ramsey Kharroubi</span> -</p>
-                    <p>Artist in residence</p>
-                    <p><span class="black">Mohammad Alhusaini</span> -</p>
-                    <p>Business development</p>
+                    <p><span class="black">G.P. Lackey</span> -<br>
+                    Artist in residence</p>
+                    <p><span class="black">Ramsey Kharroubi</span> -<br>
+                    Artist in residence</p>
+                    <p><span class="black">Mohammad Alhusaini</span> -<br>
+                    Business development</p>
                 </div>
             </div>
         </div>
