Changed 'more games' to 'games'

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12 center">
-                    <h3 class="bottom-small-spacer">More Games By Ko-Op</h3>
+                    <h3 class="bottom-small-spacer">Games By Ko-Op</h3>
                 </div>
             </div>
             <div class="row">
