Fixed retina bugs.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="row bottom-large-spacer">
                 <div class="span12 top-small-spacer">
-                    <a href="http://skippingstonesgame.com/"><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" /></a>
+                    <a href="http://skippingstonesgame.com/"><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
                 </div>
             </div>
 
@@ -104,7 +104,7 @@
             </div>
             <div class="row">
                 <div class="span12">
-                    <a href="http://www.flyredrover.com"><img alt="Redroverbanner" src="/images/redroverbanner.png" /></a>
+                    <a href="http://www.flyredrover.com"><img alt="Redroverbanner" src="/images/redroverbanner.png" class="ignore-resize"/></a>
                 </div>
             </div>
         </div>
