--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
       <link href="/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
       <!-- KO-OP -->
       <div class="ko-op">
         <div class="container">
@@ -131,7 +139,7 @@
 
             <div class="row">
                 <div class="span6">
-                    <div class="fb-like" data-send="false" data-width="450" data-show-faces="true" style="margin-bottom:10px"></div>
+                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="450" data-show-faces="false" data-font="verdana"></div>
                     <a href="https://twitter.com/koopmode" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
                     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                     <h3 style="margin-top:15px">Partners</h3>
@@ -197,16 +205,5 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
-    <div id="fb-root"></div>
-
-    //Facebook Include
-    <script>(function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-        fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-
 </body>
 </html>
