--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
             <!-- Phone -->
             <div class="row top-small-spacer bottom-small-spacer visible-phone">
-                <div class="span5">
+                <div class="span5 left-xsmall-spacer">
                     <img alt="Ko-op" src="/images/ko-op.png" style="float:left; margin-right:30px;" width="64px" />
                     <p class="top-large-spacer">Indie Game Label</p>
                 </div>
 
-                <div class="span5 top-large-spacer">
+                <div class="span5 top-small-spacer left-xsmall-spacer">
                     <a href="#" style="margin-right:0px">Games</a>
                     <a href="#" style="margin-left:16px;margin-right:0px">About Us</a>
                     <a href="#" style="margin-left:16px">Blogs</a>
@@ -84,16 +84,30 @@
             </div>
 
 
-            <div class="row">
+            <!-- Destop & Tablet -->
+            <div class="row hidden-phone">
                 <div class="span12">
-                    <iframe width="100%" height="529" src="http://www.youtube.com/embed/_NnH1MesbKg?rel=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>
+                    <iframe width="100%" height="429" src="http://www.youtube.com/embed/_NnH1MesbKg?rel=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
             </div>
 
+            <!-- Phone -->
+            <div class="row visible-phone">
+                <div class="span12 left-xsmall-spacer right-xsmall-spacer">
+                    <iframe width="100%" height="429" src="http://www.youtube.com/embed/_NnH1MesbKg?rel=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+            </div>
+
+
             <div class="row bottom-large-spacer">
-                <div class="span12 top-small-spacer">
+                <div class="span12 top-small-spacer hidden-phone">
                     <a href="http://skippingstonesgame.com/"><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
                 </div>
+
+                <div class="span12 top-small-spacer visible-phone left-xsmall-spacer right-xsmall-spacer">
+                    <a href="http://skippingstonesgame.com/"><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
+                </div>
+
             </div>
 
             <!-- Phone -->
@@ -120,12 +134,12 @@
             </div>
 
             <div class="row visible-phone">
-                <div class="span4 center bottom-med-spacer">
+                <div class="span4 center bottom-small-spacer">
                     <h3>Coming Soon</h3>
                     <h4>For iOS/Android/PC/Mac/Linux</h4>
                     <p class="grey top-small-spacer">Read the <a href="#" class="underline grey">development blog</a></p>
                 </div>
-                <div class="span4 center bottom-med-spacer">
+                <div class="span4 center bottom-small-spacer">
                     <img alt="Stone" src="/images/stone.png" />
                 </div>
                 <div class="span4 center">
@@ -161,29 +175,74 @@
     <div class="footer">
         <div class="container">
             <div class="row top-med-spacer bottom-med-spacer">
-                <div class="span12">
+                <!-- Desktop & Tablet -->
+                <div class="span12 hidden-phone">
+                    <h3 class="bottom-small-spacer">About Us</h3>
+                    <p>KO-OP Mode is a collective of independent game developers out of Montréal, Québec. Inspired by the example of indie record labels, KO-OP brings together designers of all stripes and sensibilities in one place (presently: a bedroom) to jam on both personal projects and group collaborations, with an emphasis on experimentation in design, aesthetics, and narrative.</p>
+                </div>
+
+                <!-- Phone -->
+                <div class="span12 visible-phone left-xsmall-spacer right-xsmall-spacer">
                     <h3 class="bottom-small-spacer">About Us</h3>
                     <p>KO-OP Mode is a collective of independent game developers out of Montréal, Québec. Inspired by the example of indie record labels, KO-OP brings together designers of all stripes and sensibilities in one place (presently: a bedroom) to jam on both personal projects and group collaborations, with an emphasis on experimentation in design, aesthetics, and narrative.</p>
                 </div>
             </div>
 
             <div class="row bottom-small-spacer">
-                <div class="span6">
+                <!-- Destop & Tablet -->
+                <div class="span6 hidden-phone">
                     <h3>Reach us by email or</h3>
                 </div>
 
-                <div class="span3">
+                <div class="span3 hidden-phone">
                     <h3>We Are</h3>
                 </div>
+
+                <!-- Phone -->
+                <div class="span6 visible-phone left-xsmall-spacer right-xsmall-spacer">
+                    <h3>Reach us by email or</h3>
+                </div>
+                <div class="span6 visible-phone left-xsmall-spacer right-xsmall-spacer">
+                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="450" data-show-faces="false" data-font="verdana"></div>
+                    <div class="bottom-xsmall-spacer"></div>
+                    <a href="https://twitter.com/koopmode" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                    <h3 class="top-med-spacer">Partners</h3>
+                    <a href="http://mrgs.ca/"><img alt="Mrgslogo" src="/images/mrgslogo.png" style="margin-right:20px" /></a>
+                    <a href="http://tag.hexagram.ca/"><img alt="Taglogo" src="/images/taglogo.png" /></a>
+                </div>
+
+
+                <div class="span3 visible-phone left-xsmall-spacer right-xsmall-spacer top-med-spacer">
+                    <h3>We Are</h3>
+                </div>
+                <div class="span3 visible-phone left-xsmall-spacer right-xsmall-spacer">
+                    <p><span class="black">Saleem Dabbous</span> -<br>
+                    In house artist, Co-founder</p>
+                    <p><span class="black">Nick Rudzicz</span> -<br>
+                    In house artist</p>
+                    <p><span class="black">Bronson Zgeb</span> -<br>
+                    In house artist, Co-founder</p>
+                    <p><span class="black">Sidney Shaw</span> -<br>
+                    writer, collaborator</p>
+                    <p><span class="black">G.P. Lackey</span> -<br>
+                    Artist in residence</p>
+                    <p><span class="black">Ramsey Kharroubi</span> -<br>
+                    Artist in residence</p>
+                    <p><span class="black">Mohammad Alhusaini</span> -<br>
+                    Business development</p>
+                </div>
+
+
             </div>
 
-            <div class="row">
+            <div class="row hidden-phone">
                 <div class="span6">
                     <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="450" data-show-faces="false" data-font="verdana"></div>
                     <div class="bottom-xsmall-spacer"></div>
                     <a href="https://twitter.com/koopmode" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
                     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                    <h3 style="margin-top:15px">Partners</h3>
+                    <h3 class="top-xsmall-spacer">Partners</h3>
                     <a href="http://mrgs.ca/"><img alt="Mrgslogo" src="/images/mrgslogo.png" style="margin-right:20px" /></a>
                     <a href="http://tag.hexagram.ca/"><img alt="Taglogo" src="/images/taglogo.png" /></a>
                 </div>
