Fixed some poop

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
             <!-- Desktop & Tablet Header -->
             <div class="row top-small-spacer bottom-small-spacer hidden-phone">
                 <div class="span5">
-                    <img alt="Ko-op" src="/images/ko-op.png" style="float:left; margin-right:30px;" width="64px" />
+                    <img alt="Ko-op" src="/images/ko-op.png" class="right-small-spacer" style="float:left;" width="64px" />
                     <p class="top-large-spacer">Indie Game Label</p>
                 </div>
 
                 <div class="span5 offset2 top-large-spacer" style="text-align:right;">
-                    <a href="#" style="margin-right:0px">Games</a>
-                    <a href="#" style="margin-left:16px;margin-right:0px">About Us</a>
-                    <a href="#" style="margin-left:16px">Blogs</a>
+                    <a href="#Games" style="margin-right:0px">Games</a>
+                    <a href="#About" style="margin-left:16px;margin-right:0px">About Us</a>
+                    <a href="http://koopmodeblog.tumblr.com/" style="margin-left:16px">Blogs</a>
                     <a href="https://www.facebook.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Facebook']);"><img alt="Fb" src="/images/fb.png" style="margin-left:16px;margin-right:0px" width="20px" /></a>
                     <a href="http://www.twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Twitter']);"><img alt="Twitter" src="/images/twitter.png" style="margin-left:16px;margin-right:0px" width="24px" /></a>
                 </div>
@@ -75,9 +75,9 @@
                 </div>
 
                 <div class="span5 top-small-spacer left-xsmall-spacer">
-                    <a href="#" style="margin-right:0px">Games</a>
-                    <a href="#" style="margin-left:16px;margin-right:0px">About Us</a>
-                    <a href="#" style="margin-left:16px">Blogs</a>
+                    <a href="#Games" style="margin-right:0px">Games</a>
+                    <a href="#About" style="margin-left:16px;margin-right:0px">About Us</a>
+                    <a href="http://koopmodeblog.tumblr.com/" style="margin-left:16px">Blogs</a>
                     <a href="https://www.facebook.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Facebook']);"><img alt="Fb" src="/images/fb.png" style="margin-left:16px;margin-right:0px" width="20px" /></a>
                     <a href="http://www.twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Twitter']);"><img alt="Twitter" src="/images/twitter.png" style="margin-left:16px;margin-right:0px" width="24px" /></a>
                 </div>
@@ -157,7 +157,7 @@
         </div>
     </div>
 
-    <div class="games top-small-spacer bottom-small-spacer shadowed">
+    <a name="Games"><div class="games top-small-spacer bottom-small-spacer shadowed"></a>
         <div class="container">
             <div class="row">
                 <div class="span12 center">
@@ -174,7 +174,7 @@
 
     <div class="footer">
         <div class="container">
-            <div class="row top-med-spacer bottom-med-spacer">
+            <a name="About"><div class="row top-med-spacer bottom-med-spacer"></a>
                 <!-- Desktop & Tablet -->
                 <div class="span12 hidden-phone">
                     <h3 class="bottom-small-spacer">About Us</h3>
@@ -203,7 +203,7 @@
                     <h3>Reach us by email or</h3>
                 </div>
                 <div class="span6 visible-phone left-xsmall-spacer right-xsmall-spacer">
-                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="450" data-show-faces="false" data-font="verdana"></div>
+                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="250" data-show-faces="false" data-font="verdana"></div>
                     <div class="bottom-xsmall-spacer"></div>
                     <a href="https://twitter.com/koopmode" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
                     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -238,7 +238,7 @@
 
             <div class="row hidden-phone">
                 <div class="span6">
-                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="450" data-show-faces="false" data-font="verdana"></div>
+                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="250" data-show-faces="false" data-font="verdana"></div>
                     <div class="bottom-xsmall-spacer"></div>
                     <a href="https://twitter.com/koopmode" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
                     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
