--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <link href="/stylesheets/bootstrap-responsive.min.css?body=1" media="all" rel="stylesheet" type="text/css" />
       <link href="/stylesheets/styles.css?body=1" media="all" rel="stylesheet" type="text/css" />
       <link href="/stylesheets/retina.css?body=1" media="all" rel="stylesheet" type="text/css" />
-      <link href="/stylesheets/static_pages.css?body=1" media="all" rel="stylesheet" type="text/css" />
+      <link href="/stylesheets/koop.css?body=1" media="all" rel="stylesheet" type="text/css" />
+      <link href="/stylesheets/common.css?body=1" media="all" rel="stylesheet" type="text/css" />
 
       <!-- For third-generation iPad with high-resolution Retina display: -->
       <!-- Size should be 144 x 144 pixels -->
@@ -61,7 +62,7 @@
                 <div class="span5 offset2 top-large-spacer" style="text-align:right;">
                     <a href="#Games" style="margin-right:0px">Games</a>
                     <a href="#About" style="margin-left:16px;margin-right:0px">About Us</a>
-                    <a href="http://koopmodeblog.tumblr.com/" style="margin-left:16px">Blogs</a>
+                    <a href="http://koopmodeblog.tumblr.com/" style="margin-left:16px">Blog</a>
                     <a href="https://www.facebook.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Facebook']);"><img alt="Fb" src="/images/fb.png" style="margin-left:16px;margin-right:0px" width="20px" /></a>
                     <a href="http://www.twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Twitter']);"><img alt="Twitter" src="/images/twitter.png" style="margin-left:16px;margin-right:0px" width="24px" /></a>
                 </div>
