Fixed blog link

--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
                 <div class="span4 hidden-phone">
                     <h3>Coming Soon</h3>
                     <h4>For iOS/Android/PC/Mac/Linux</h4>
-                    <p class="grey top-small-spacer">Read the <a href="#" class="underline grey">development blog</a></p>
+                    <p class="grey top-small-spacer">Read the <a href="http://koopmodeblog.tumblr.com/" class="underline grey">development blog</a></p>
                 </div>
                 <!-- Phone -->
                 <div align="center" class="span4 visible-phone">
                     <h3>Coming Soon</h3>
                     <h4>For iOS/Android/PC/Mac/Linux</h4>
-                    <p class="grey top-small-spacer">Read the <a href="#" class="underline grey">development blog</a></p>
+                    <p class="grey top-small-spacer">Read the <a href="http://koopmodeblog.tumblr.com/" class="underline grey">development blog</a></p>
                 </div>
 
                 <div align="center" class="span2 offset1">
