Added a skipping stones banner to the games section

--- a/index.html
+++ b/index.html
@@ -153,7 +153,12 @@
             </div>
             <div class="row">
                 <div class="span12">
-                    <a href="http://www.flyredrover.com"><img alt="Redroverbanner" src="/images/redroverbanner.png" class="ignore-resize"/></a>
+                    <a href="http://www.flyredrover.com"><img alt="Red Rover banner" src="/images/redroverbanner.png" class="ignore-resize"/></a>
+                </div>
+            </div>
+            <div class="row top-small-spacer">
+                <div class="span12">
+                    <a href="http://www.skippingstonesgame.com"><img alt="Skipping Stones Banner" src="/images/skippingstonesbanner.png" class="ignore-resize"/></a>
                 </div>
             </div>
         </div>
