--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 
             <!-- Phone -->
             <div class="row top-small-spacer bottom-small-spacer visible-phone">
-                <div class="span5 left-xsmall-spacer">
+                <div class="span5">
                     <img alt="Ko-op" src="/images/ko-op.png" style="float:left; margin-right:30px;" width="64px" />
                     <p class="top-large-spacer">Indie Game Label</p>
                 </div>
 
-                <div class="span5 top-small-spacer left-xsmall-spacer">
+                <div class="span5 top-small-spacer">
                     <a href="#Games" style="margin-right:0px">Games</a>
                     <a href="#About" style="margin-left:16px;margin-right:0px">About Us</a>
                     <a href="http://koopmodeblog.tumblr.com/" style="margin-left:16px">Blogs</a>
@@ -94,7 +94,7 @@
 
             <!-- Phone -->
             <div class="row visible-phone">
-                <div class="span12 left-xsmall-spacer right-xsmall-spacer">
+                <div class="span12">
                     <iframe width="100%" height="429" src="http://www.youtube.com/embed/_NnH1MesbKg?rel=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <a href="http://skippingstonesgame.com/"><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
                 </div>
 
-                <div class="span12 top-small-spacer visible-phone left-xsmall-spacer right-xsmall-spacer">
+                <div class="span12 top-small-spacer visible-phone">
                     <a href="http://skippingstonesgame.com/"><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
                 </div>
 
@@ -144,7 +144,7 @@
         </div>
     </div>
 
-    <a name="Games"><div class="games top-small-spacer bottom-small-spacer shadowed"></a>
+    <a name="Games"><div class="games top-small-spacer bottom-small-spacer shadowed" style="margin-left:-20px; margin-right:-20px"></a>
         <div class="container">
             <div class="row">
                 <div class="span12 center">
@@ -174,7 +174,7 @@
                 </div>
 
                 <!-- Phone -->
-                <div class="span12 visible-phone left-xsmall-spacer right-xsmall-spacer">
+                <div class="span12 visible-phone">
                     <h3 class="bottom-small-spacer">About Us</h3>
                     <p>KO-OP Mode is a collective of independent game developers out of Montréal, Québec. Inspired by the example of indie record labels, KO-OP brings together designers of all stripes and sensibilities in one place (presently: a bedroom) to jam on both personal projects and group collaborations, with an emphasis on experimentation in design, aesthetics, and narrative.</p>
                 </div>
@@ -191,46 +191,16 @@
                     <h3>We Are</h3>
                 </div>
 
-                <!-- Phone -->
-                <div class="span6 visible-phone left-xsmall-spacer right-xsmall-spacer">
-                    <h3>Reach us by email or</h3>
-                </div>
-                <div class="span6 visible-phone left-xsmall-spacer right-xsmall-spacer">
-                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="250" data-show-faces="false" data-font="verdana"></div>
-                    <div class="bottom-xsmall-spacer"></div>
-                    <a href="https://twitter.com/koopmode" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
-                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                    <h3 class="top-med-spacer">Partners</h3>
-                    <a href="http://mrgs.ca/"><img alt="Mrgslogo" src="/images/mrgslogo.png" style="margin-right:20px" /></a>
-                    <a href="http://tag.hexagram.ca/"><img alt="Taglogo" src="/images/taglogo.png" /></a>
-                </div>
-
-
-                <div class="span3 visible-phone left-xsmall-spacer right-xsmall-spacer top-med-spacer">
-                    <h3>We Are</h3>
-                </div>
-                <div class="span3 visible-phone left-xsmall-spacer right-xsmall-spacer">
-                    <p><span class="black">Saleem Dabbous</span> -<br>
-                    In house artist, Co-founder</p>
-                    <p><span class="black">Nick Rudzicz</span> -<br>
-                    In house artist</p>
-                    <p><span class="black">Bronson Zgeb</span> -<br>
-                    In house artist, Co-founder</p>
-                    <p><span class="black">Sidney Shaw</span> -<br>
-                    writer, collaborator</p>
-                    <p><span class="black">G.P. Lackey</span> -<br>
-                    Artist in residence</p>
-                    <p><span class="black">Ramsey Kharroubi</span> -<br>
-                    Artist in residence</p>
-                    <p><span class="black">Mohammad Alhusaini</span> -<br>
-                    Business development</p>
-                </div>
 
 
             </div>
 
-            <div class="row hidden-phone">
+            <div class="row">
                 <div class="span6">
+                    <div class="visible-phone">
+                        <h3>Subscribe to our general mailing list</h3>
+                        <h4>Newsletter, game announcements and releases</h4>
+                    </div>
                     <form accept-charset="UTF-8" action="mailing_list/subscribe_general" class="mail-form" data-remote="true" id="general-mail-form" method="post">
                         <input class="textfield" id="email" name="email" placeholder="Email" type="text"/>
                         <input class="subscribe" name="general_subscribe" type="submit" value="Subscribe" />
@@ -242,12 +212,12 @@
                     <div class="bottom-xsmall-spacer"></div>
                     <a href="https://twitter.com/koopmode" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
                     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                    <h3 class="top-xsmall-spacer">Partners</h3>
+                    <h3 class="top-small-spacer">Partners</h3>
                     <a href="http://mrgs.ca/"><img alt="Mrgslogo" src="/images/mrgslogo.png" style="margin-right:20px" /></a>
                     <a href="http://tag.hexagram.ca/"><img alt="Taglogo" src="/images/taglogo.png" /></a>
                 </div>
 
-                <div class="span3">
+                <div class="span3 hidden-phone">
                     <p><span class="black">Saleem Dabbous</span> -<br>
                     In house artist, Co-founder</p>
                     <p><span class="black">Nick Rudzicz</span> -<br>
@@ -258,7 +228,28 @@
                     writer, collaborator</p>
                 </div>
 
-                <div class="span3">
+                <div class="span3 hidden-phone">
+                    <p><span class="black">G.P. Lackey</span> -<br>
+                    Artist in residence</p>
+                    <p><span class="black">Ramsey Kharroubi</span> -<br>
+                    Artist in residence</p>
+                    <p><span class="black">Mohammad Alhusaini</span> -<br>
+                    Business development</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span3 visible-phone top-med-spacer">
+                    <h3>We Are</h3>
+                </div>
+                <div class="span3 visible-phone">
+                    <p><span class="black">Saleem Dabbous</span> -<br>
+                    In house artist, Co-founder</p>
+                    <p><span class="black">Nick Rudzicz</span> -<br>
+                    In house artist</p>
+                    <p><span class="black">Bronson Zgeb</span> -<br>
+                    In house artist, Co-founder</p>
+                    <p><span class="black">Sidney Shaw</span> -<br>
+                    writer, collaborator</p>
                     <p><span class="black">G.P. Lackey</span> -<br>
                     Artist in residence</p>
                     <p><span class="black">Ramsey Kharroubi</span> -<br>
