--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="span5 offset2 top-large-spacer" style="text-align:right;">
                     <a href="#Games" style="margin-right:0px">Games</a>
                     <a href="#About" style="margin-left:16px;margin-right:0px">About Us</a>
-                    <a href="http://koopmodeblog.tumblr.com/" style="margin-left:16px">Blog</a>
+                    <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" style="margin-left:16px">Blog</a>
                     <a href="https://www.facebook.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Facebook']);"><img alt="Fb" src="/images/fb.png" style="margin-left:16px;margin-right:0px" width="20px" /></a>
                     <a href="http://www.twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Twitter']);"><img alt="Twitter" src="/images/twitter.png" style="margin-left:16px;margin-right:0px" width="24px" /></a>
                 </div>
@@ -78,7 +78,7 @@
                 <div class="span5 top-small-spacer">
                     <a href="#Games" style="margin-right:0px">Games</a>
                     <a href="#About" style="margin-left:16px;margin-right:0px">About Us</a>
-                    <a href="http://koopmodeblog.tumblr.com/" style="margin-left:16px">Blogs</a>
+                    <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" style="margin-left:16px">Blogs</a>
                     <a href="https://www.facebook.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Facebook']);"><img alt="Fb" src="/images/fb.png" style="margin-left:16px;margin-right:0px" width="20px" /></a>
                     <a href="http://www.twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Twitter']);"><img alt="Twitter" src="/images/twitter.png" style="margin-left:16px;margin-right:0px" width="24px" /></a>
                 </div>
@@ -102,11 +102,11 @@
 
             <div class="row bottom-large-spacer">
                 <div class="span12 top-small-spacer hidden-phone">
-                    <a href="http://skippingstonesgame.com/"><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
+                    <a href="http://skippingstonesgame.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'SkippingStones']);" ><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
                 </div>
 
                 <div class="span12 top-small-spacer visible-phone">
-                    <a href="http://skippingstonesgame.com/"><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
+                    <a href="http://skippingstonesgame.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'SkippingStones']);" ><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
                 </div>
 
             </div>
@@ -116,13 +116,13 @@
                 <div class="span4 hidden-phone">
                     <h3>Coming Soon</h3>
                     <h4>For iOS/Android/PC/Mac/Linux</h4>
-                    <p class="grey top-small-spacer">Read the <a href="http://koopmodeblog.tumblr.com/" class="underline grey">development blog</a></p>
+                    <p class="grey top-small-spacer">Read the <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" class="underline grey">development blog</a></p>
                 </div>
                 <!-- Phone -->
                 <div align="center" class="span4 visible-phone">
                     <h3>Coming Soon</h3>
                     <h4>For iOS/Android/PC/Mac/Linux</h4>
-                    <p class="grey top-small-spacer">Read the <a href="http://koopmodeblog.tumblr.com/" class="underline grey">development blog</a></p>
+                    <p class="grey top-small-spacer">Read the <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" class="underline grey">development blog</a></p>
                 </div>
 
                 <div align="center" class="span2 offset1">
@@ -153,12 +153,12 @@
             </div>
             <div class="row">
                 <div class="span12">
-                    <a href="http://www.flyredrover.com"><img alt="Red Rover banner" src="/images/redroverbanner.png" class="ignore-resize"/></a>
+                    <a href="http://www.flyredrover.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'RedRover']);" ><img alt="Red Rover banner" src="/images/redroverbanner.png" class="ignore-resize"/></a>
                 </div>
             </div>
             <div class="row top-small-spacer">
                 <div class="span12">
-                    <a href="http://www.skippingstonesgame.com"><img alt="Skipping Stones Banner" src="/images/skippingstonesbanner.png" class="ignore-resize"/></a>
+                    <a href="http://www.skippingstonesgame.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'SkippingStones']);" ><img alt="Skipping Stones Banner" src="/images/skippingstonesbanner.png" class="ignore-resize"/></a>
                 </div>
             </div>
         </div>
@@ -210,11 +210,11 @@
 
                     <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="250" data-show-faces="false" data-font="verdana"></div>
                     <div class="bottom-xsmall-spacer"></div>
-                    <a href="https://twitter.com/koopmode" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
+                    <a href="https://twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Social', 'click', 'FollowTwitter']);" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
                     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                     <h3 class="top-small-spacer">Partners</h3>
-                    <a href="http://mrgs.ca/"><img alt="Mrgslogo" src="/images/mrgslogo.png" style="margin-right:20px" /></a>
-                    <a href="http://tag.hexagram.ca/"><img alt="Taglogo" src="/images/taglogo.png" /></a>
+                    <a href="http://mrgs.ca/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'MRGS']);" ><img alt="Mrgslogo" src="/images/mrgslogo.png" style="margin-right:20px" /></a>
+                    <a href="http://tag.hexagram.ca/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Tag']);" ><img alt="Taglogo" src="/images/taglogo.png" /></a>
                 </div>
 
                 <div class="span3 hidden-phone">
