--- a/index.html
+++ b/index.html
@@ -266,7 +266,12 @@
     <div class="copyright">
         <div class="container">
             <div class="row">
-                <div span="span3" style="text-align:right; margin-top:28px">
+                <div span="span3" align="right" class="top-large-spacer">
+                    <p><a href="http://presskit.ko-opmode.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Presskit']);">Presskit</a> available</p>
+                </div>
+            </div>
+            <div class="row">
+                <div span="span3" align="right">
                     <p>Copyright 2012 KO-OP Mode inc.</p>
                 </div>
             </div>
