Added links to our names

--- a/index.html
+++ b/index.html
@@ -218,22 +218,22 @@
                 </div>
 
                 <div class="span3 hidden-phone">
-                    <p><span class="black">Saleem Dabbous</span> -<br>
+                    <p><a href="https://twitter.com/Seemo"><span class="black">Saleem Dabbous</span></a> -<br>
                     In house artist, Co-founder</p>
-                    <p><span class="black">Nick Rudzicz</span> -<br>
+                    <p><a href="https://twitter.com/newton64"><span class="black">Nick Rudzicz</span></a> -<br>
                     In house artist</p>
-                    <p><span class="black">Bronson Zgeb</span> -<br>
+                    <p><a href="https://twitter.com/bzgeb"><span class="black">Bronson Zgeb</span></a> -<br>
                     In house artist, Co-founder</p>
                     <p><span class="black">Sidney Shaw</span> -<br>
                     writer, collaborator</p>
                 </div>
 
                 <div class="span3 hidden-phone">
-                    <p><span class="black">G.P. Lackey</span> -<br>
+                    <p><a href="https://twitter.com/mousefountain"><span class="black">G.P. Lackey</span></a> -<br>
                     Artist in residence</p>
-                    <p><span class="black">Ramsey Kharroubi</span> -<br>
+                    <p><a href="https://twitter.com/marsmodule"><span class="black">Ramsey Kharroubi</span></a> -<br>
                     Artist in residence</p>
-                    <p><span class="black">Mohammad Alhusaini</span> -<br>
+                    <p><a href="https://twitter.com/moe237"><span class="black">Mohammad Alhusaini</span></a> -<br>
                     Business development</p>
                 </div>
             </div>
@@ -242,19 +242,19 @@
                     <h3>We Are</h3>
                 </div>
                 <div class="span3 visible-phone">
-                    <p><span class="black">Saleem Dabbous</span> -<br>
+                    <p><a href="https://twitter.com/Seemo"><span class="black">Saleem Dabbous</span></a> -<br>
                     In house artist, Co-founder</p>
-                    <p><span class="black">Nick Rudzicz</span> -<br>
+                    <p><a href="https://twitter.com/newton64"><span class="black">Nick Rudzicz</span></a> -<br>
                     In house artist</p>
-                    <p><span class="black">Bronson Zgeb</span> -<br>
+                    <p><a href="https://twitter.com/bzgeb"><span class="black">Bronson Zgeb</span></a> -<br>
                     In house artist, Co-founder</p>
                     <p><span class="black">Sidney Shaw</span> -<br>
                     writer, collaborator</p>
-                    <p><span class="black">G.P. Lackey</span> -<br>
+                    <p><a href="https://twitter.com/mousefountain"><span class="black">G.P. Lackey</span></a> -<br>
                     Artist in residence</p>
-                    <p><span class="black">Ramsey Kharroubi</span> -<br>
+                    <p><a href="https://twitter.com/marsmodule"><span class="black">Ramsey Kharroubi</span></a> -<br>
                     Artist in residence</p>
-                    <p><span class="black">Mohammad Alhusaini</span> -<br>
+                    <p><a href="https://twitter.com/moe237"><span class="black">Mohammad Alhusaini</span></a> -<br>
                     Business development</p>
                 </div>
             </div>
