Added KFV banner

--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
                         <div style="height:65px" id="response">
 
                         </div>
-
                     </form>
                 </div>
             </div>
@@ -152,6 +151,11 @@
                 </div>
             </div>
             <div class="row">
+                <div class="span12">
+                    <a href="http://kfv.ko-opmode.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'KFV']);" ><img alt="KFV Banner" src="/images/KFVbanner.png" class="ignore-resize"/></a>
+                </div>
+            </div>
+            <div class="row top-small-spacer">
                 <div class="span12">
                     <a href="http://www.flyredrover.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'RedRover']);" ><img alt="Red Rover banner" src="/images/redroverbanner.png" class="ignore-resize"/></a>
                 </div>
@@ -293,6 +297,7 @@
     <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-30393443-1']);
+    _gaq.push(['_setDomainName', 'ko-opmode.com']);
     _gaq.push(['_trackPageview']);
     
     (function() {
