--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
       <link href='http://fonts.googleapis.com/css?family=Advent+Pro:200,400,700' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
       <link href="/stylesheets/application.css?body=1" media="all" rel="stylesheet" type="text/css" />
       <link href="/stylesheets/normalize.css?body=1" media="all" rel="stylesheet" type="text/css" />
       <link href="/stylesheets/bootstrap.min.css?body=1" media="all" rel="stylesheet" type="text/css" />
@@ -56,12 +57,12 @@
             <div class="row top-small-spacer bottom-small-spacer hidden-phone">
                 <div class="span5">
                     <img alt="Ko-op" src="/images/ko-op.png" class="right-small-spacer" style="float:left;" width="64px" />
-                    <p class="top-large-spacer">Indie Game Label</p>
+                    <p class="top-large-spacer">Experimental Game Collective</p>
                 </div>
 
                 <div class="span5 offset2 top-large-spacer" style="text-align:right;">
                     <a href="#Games" style="margin-right:0px">Games</a>
-                    <a href="#About" style="margin-left:16px;margin-right:0px">About Us</a>
+                    <!-- <a href="#About" style="margin-left:16px;margin-right:0px">About Us</a> -->
                     <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" style="margin-left:16px">Blog</a>
                     <a href="https://www.facebook.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Facebook']);"><img alt="Fb" src="/images/fb.png" style="margin-left:16px;margin-right:0px" width="20px" /></a>
                     <a href="http://www.twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Twitter']);"><img alt="Twitter" src="/images/twitter.png" style="margin-left:16px;margin-right:0px" width="24px" /></a>
@@ -129,7 +130,8 @@
                     <img alt="Stone" src="/images/stone.png" />
                 </div>
                 <div class="span4 offset1">
-                    <h3>Get Notified of the Release</h3>
+                    <h3>Get notified of the release</h3>
+                    <h5>+ upcoming KO-OP News and goodies</h5>
                     <form accept-charset="UTF-8" action="mailing_list/subscribe" class="mail-form" data-remote="true" id="mail-form" method="post">
                         <input class="textfield" id="email" name="email" placeholder="Email" type="text" />
                         <input class="subscribe" name="commit" type="submit" value="Subscribe" />
@@ -147,7 +149,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12 center">
-                    <h3 class="bottom-small-spacer">Games By Ko-Op</h3>
+                    <h3 class="bottom-small-spacer">Games By KO-OP</h3>
                 </div>
             </div>
             <div class="row">
@@ -163,6 +165,44 @@
             <div class="row top-small-spacer">
                 <div class="span12">
                     <a href="http://www.skippingstonesgame.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'SkippingStones']);" ><img alt="Skipping Stones Banner" src="/images/skippingstonesbanner.png" class="ignore-resize"/></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="subscribe-section">
+        <div class="container">
+            <div class="row top-med-spacer bottom-med-spacer">
+                <div class="span12">
+                    <h2>SUBSCRIBE TO DOWNLOAD GOODIES FROM OUR GAMES</h2>
+                </div>
+            </div>
+            <div class="row bottom-small-spacer">
+                <div class="span7">
+                    <img alt="Skipping Stones, KFV, Red Rover, Wallpaper Pack" src="images/wallpaper.png">
+                </div>
+                <div class="span5">
+                    <img alt="KFV EP By Mars Module" src="images/KFVep.png">
+                    <img alt="Prototypes" src="images/prototypes.png">
+                </div>
+            </div>
+            <div class="row bottom-small-spacer">
+                <div class="span7">
+                    <img alt="Upcoming Posters" src="images/upcoming posters.png">
+                </div>
+                <div class="span5">
+                    <h2 class="bottom-xsmall-spacer">SUBSCRIBE TO THE MAILING LIST</h2>
+                    <form accept-charset="UTF-8" action="mailing_list/subscribe_general" class="mail-form" data-remote="true" id="general-mail-form" method="post">
+                        <input class="textfield" id="email" name="email" placeholder="Email" type="text"/>
+                        <input class="subscribe" name="general_subscribe" type="submit" value="Subscribe" style="margin-bottom:9px" />
+                        <div style="height:35px" id="general-response">
+                        </div>
+                    </form>
+
+                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="250" data-show-faces="false" data-font="verdana" data-colorscheme="dark"></div>
+                    <div class="bottom-xsmall-spacer"></div>
+                    <a href="https://twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Social', 'click', 'FollowTwitter']);" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                 </div>
             </div>
         </div>
@@ -186,41 +226,20 @@
 
             <div class="row bottom-xsmall-spacer">
                 <!-- Destop & Tablet -->
-                <div class="span6 hidden-phone">
-                    <h3>Subscribe to our general mailing list</h3>
-                    <h4>Newsletter, game announcements and releases</h4>
+                <div class="span3 hidden-phone">
+                    <h3>Partners</h3>
                 </div>
 
                 <div class="span3 hidden-phone">
                     <h3>We Are</h3>
                 </div>
-
-
-
             </div>
 
-            <div class="row">
-                <div class="span6">
-                    <div class="visible-phone">
-                        <h3>Subscribe to our general mailing list</h3>
-                        <h4>Newsletter, game announcements and releases</h4>
-                    </div>
-                    <form accept-charset="UTF-8" action="mailing_list/subscribe_general" class="mail-form" data-remote="true" id="general-mail-form" method="post">
-                        <input class="textfield" id="email" name="email" placeholder="Email" type="text"/>
-                        <input class="subscribe" name="general_subscribe" type="submit" value="Subscribe" />
-                        <div style="height:35px" id="general-response">
-                        </div>
-                    </form>
-
-                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="250" data-show-faces="false" data-font="verdana"></div>
-                    <div class="bottom-xsmall-spacer"></div>
-                    <a href="https://twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Social', 'click', 'FollowTwitter']);" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
-                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                    <h3 class="top-small-spacer">Partners</h3>
+            <div class="row bottom-med-spacer">
+                <div class="span3">
                     <a href="http://mrgs.ca/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'MRGS']);" ><img alt="Mrgslogo" src="/images/mrgslogo.png" style="margin-right:20px" /></a>
                     <a href="http://tag.hexagram.ca/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Tag']);" ><img alt="Taglogo" src="/images/taglogo.png" /></a>
                 </div>
-
                 <div class="span3 hidden-phone">
                     <p><a href="https://twitter.com/Seemo"><span class="black">Saleem Dabbous</span></a> -<br>
                     In house artist, Co-founder</p>
@@ -239,6 +258,12 @@
                     Artist in residence</p>
                     <p><a href="https://twitter.com/moe237"><span class="black">Mohammad Alhusaini</span></a> -<br>
                     Business development</p>
+                </div>
+
+                <div class="span3 hidden-phone">
+                    <div align="right"><p><a href="http://presskit.ko-opmode.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Presskit']);" class="presskit">presskit</a></p>
+                    <p class="copy">Copyright 2012 KO-OP Mode inc.</p>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -262,21 +287,10 @@
                     Business development</p>
                 </div>
             </div>
-        </div>
-    </div>
-
-
-    <!-- Copyright -->
-    <div class="copyright">
-        <div class="container">
-            <div class="row">
-                <div span="span3" align="right" class="top-large-spacer">
-                    <p><a href="http://presskit.ko-opmode.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Presskit']);">Presskit</a> available</p>
-                </div>
-            </div>
-            <div class="row">
-                <div span="span3" align="right">
-                    <p>Copyright 2012 KO-OP Mode inc.</p>
+            <div class="row top-med-spacer bottom-med-spacer">
+                <div class="span3 visible-phone">
+                    <p><a href="http://presskit.ko-opmode.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Presskit']);" class="presskit">presskit</a></p>
+                    <p class="copy">Copyright 2012 KO-OP Mode inc.</p>
                 </div>
             </div>
         </div>
