Website design update

--- a/index.html
+++ b/index.html
@@ -51,101 +51,89 @@
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
       <!-- KO-OP -->
+      <div class="hidden-phone" style="width:100%; height:1440px; position:absolute; z-index:-1; background-repeat: no-repeat; background-image:url('images/court.png');"></div>
+
+      <div class="visible-phone" style="width:100%; height:529px; left:0; position:absolute; z-index:-1; background-repeat: no-repeat; background-image:url('images/court.png'); background-repeat: no-repeat;"></div>
       <div class="ko-op">
         <div class="container">
             <!-- Desktop & Tablet Header -->
             <div class="row top-small-spacer bottom-small-spacer hidden-phone">
-                <div class="span5">
+                <div class="span1">
                     <img alt="Ko-op" src="/images/ko-op.png" class="right-small-spacer" style="float:left;" width="64px" />
-                    <p class="top-large-spacer">Experimental Game Collective</p>
                 </div>
 
-                <div class="span5 offset2 top-large-spacer" style="text-align:right;">
+                <div class="offset1 span8 top-small-spacer">
+                    <iframe align="center" width="100%" height="429" src="http://www.youtube.com/embed/I7m3aASq8T0?rel=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+
+                <div class="span2" style="text-align:right;">
                     <a href="#Games" style="margin-right:0px">Games</a>
-                    <!-- <a href="#About" style="margin-left:16px;margin-right:0px">About Us</a> -->
                     <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" style="margin-left:16px">Blog</a>
-                    <a href="https://www.facebook.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Facebook']);"><img alt="Fb" src="/images/fb.png" style="margin-left:16px;margin-right:0px" width="20px" /></a>
-                    <a href="http://www.twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Twitter']);"><img alt="Twitter" src="/images/twitter.png" style="margin-left:16px;margin-right:0px" width="24px" /></a>
                 </div>
             </div>
 
-            <!-- Phone -->
             <div class="row top-small-spacer bottom-small-spacer visible-phone">
-                <div class="span5">
-                    <img alt="Ko-op" src="/images/ko-op.png" style="float:left; margin-right:30px;" width="64px" />
-                    <p class="top-large-spacer">Indie Game Label</p>
+                <div class="row">
+                    <div class="span2" style="text-align:right;">
+                        <a href="#Games" style="margin-right:0px">Games</a>
+                        <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" style="margin-left:16px">Blog</a>
+                    </div>
                 </div>
 
-                <div class="span5 top-small-spacer">
-                    <a href="#Games" style="margin-right:0px">Games</a>
-                    <a href="#About" style="margin-left:16px;margin-right:0px">About Us</a>
-                    <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" style="margin-left:16px">Blogs</a>
-                    <a href="https://www.facebook.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Facebook']);"><img alt="Fb" src="/images/fb.png" style="margin-left:16px;margin-right:0px" width="20px" /></a>
-                    <a href="http://www.twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Twitter']);"><img alt="Twitter" src="/images/twitter.png" style="margin-left:16px;margin-right:0px" width="24px" /></a>
+                <div class="row">
+                    <div class="span8 top-med-spacer">
+                        <iframe align="center" width="100%" height="429" src="http://www.youtube.com/embed/I7m3aASq8T0?rel=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
 
+            <div class="row bottom-large-spacer hidden-phone">
+                <div class="span12 top-small-spacer" align="center">
+                    <a href="http://kfv.ko-opmode.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'KFV']);" ><img alt="Kung Fu Volleyball. Play Now" src="/images/playnow.png" class="ignore-resize"/></a>
+                </div>
+            </div>
 
-            <!-- Destop & Tablet -->
-            <div class="row hidden-phone">
+            <div style="background-color:#000; margin-right:-20px">
+            <div class="row subscribe-section" style="margin-bottom:16px;">
+                <div class="span12 hidden-phone">
+                    <h2>SUBSCRIBE TO DOWNLOAD GOODIES FROM OUR GAMES</h2>
+                </div>
+
+                <!-- Goodies -->
+                <div class="span12 padding-right:20px; hidden-phone">
+                    <img alt="Subscription Goodies." src="images/subbanner.png"/>
+                </div>
+
+                <!-- Mailing List -->
                 <div class="span12">
-                    <iframe width="100%" height="429" src="http://www.youtube.com/embed/_NnH1MesbKg?rel=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>
+                    <h2>SUBSCRIBE TO THE MAILING LIST</h2>
                 </div>
-            </div>
-
-            <!-- Phone -->
-            <div class="row visible-phone">
-                <div class="span12">
-                    <iframe width="100%" height="429" src="http://www.youtube.com/embed/_NnH1MesbKg?rel=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>
-                </div>
-            </div>
-
-
-            <div class="row bottom-large-spacer">
-                <div class="span12 top-small-spacer hidden-phone">
-                    <a href="http://skippingstonesgame.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'SkippingStones']);" ><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
-                </div>
-
-                <div class="span12 top-small-spacer visible-phone">
-                    <a href="http://skippingstonesgame.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'SkippingStones']);" ><img alt="Skippingstoneslogo" src="/images/skippingstoneslogo.png" class="ignore-resize"/></a>
-                </div>
-
-            </div>
-
-            <div class="row">
-                <!-- Desktop -->
-                <div class="span4 hidden-phone">
-                    <h3>Coming Soon</h3>
-                    <h4>For iOS/Android/PC/Mac/Linux</h4>
-                    <p class="grey top-small-spacer">Read the <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" class="underline grey">development blog</a></p>
-                </div>
-                <!-- Phone -->
-                <div align="center" class="span4 visible-phone">
-                    <h3>Coming Soon</h3>
-                    <h4>For iOS/Android/PC/Mac/Linux</h4>
-                    <p class="grey top-small-spacer">Read the <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" class="underline grey">development blog</a></p>
-                </div>
-
-                <div align="center" class="span2 offset1">
-                    <img alt="Stone" src="/images/stone.png" />
-                </div>
-                <div class="span4 offset1">
-                    <h3>Get notified of the release</h3>
-                    <h5>+ upcoming KO-OP News and goodies</h5>
+                <div class="span6">
                     <form accept-charset="UTF-8" action="mailing_list/subscribe" class="mail-form" data-remote="true" id="mail-form" method="post">
                         <input class="textfield" id="email" name="email" placeholder="Email" type="text" />
                         <input class="subscribe" name="commit" type="submit" value="Subscribe" />
-                        <div style="height:65px" id="response">
-
+                        <div style="height:20px" id="response">
                         </div>
                     </form>
                 </div>
+
+                <!-- Facebook -->
+                <div class="span3">
+                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="240" data-show-faces="false" data-font="verdana" data-colorscheme="dark"></div>
+                </div>
+
+                <!-- Twitter -->
+                <div class="span3">
+                    <a href="https://twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Social', 'click', 'FollowTwitter']);" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                </div>
+            </div>
             </div>
 
         </div>
     </div>
 
-    <a name="Games"><div class="games top-small-spacer bottom-small-spacer shadowed" style="margin-left:-20px; margin-right:-20px"></a>
+    <a name="Games"><div class="games top-small-spacer bottom-small-spacer shadowed" style="margin-left:0px; margin-right:0px"></a>
         <div class="container">
             <div class="row">
                 <div class="span12 center">
@@ -165,44 +153,6 @@
             <div class="row top-small-spacer">
                 <div class="span12">
                     <a href="http://www.skippingstonesgame.com" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'SkippingStones']);" ><img alt="Skipping Stones Banner" src="/images/skippingstonesbanner.png" class="ignore-resize"/></a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="subscribe-section">
-        <div class="container">
-            <div class="row top-med-spacer bottom-med-spacer">
-                <div class="span12">
-                    <h2>SUBSCRIBE TO DOWNLOAD GOODIES FROM OUR GAMES</h2>
-                </div>
-            </div>
-            <div class="row bottom-small-spacer">
-                <div class="span7">
-                    <img alt="Skipping Stones, KFV, Red Rover, Wallpaper Pack" src="images/wallpaper.png">
-                </div>
-                <div class="span5">
-                    <img alt="KFV EP By Mars Module" src="images/KFVep.png">
-                    <img alt="Prototypes" src="images/prototypes.png">
-                </div>
-            </div>
-            <div class="row bottom-small-spacer">
-                <div class="span7">
-                    <img alt="Upcoming Posters" src="images/upcoming posters.png">
-                </div>
-                <div class="span5">
-                    <h2 class="bottom-xsmall-spacer">SUBSCRIBE TO THE MAILING LIST</h2>
-                    <form accept-charset="UTF-8" action="mailing_list/subscribe_general" class="mail-form" data-remote="true" id="general-mail-form" method="post">
-                        <input class="textfield" id="email" name="email" placeholder="Email" type="text"/>
-                        <input class="subscribe" name="general_subscribe" type="submit" value="Subscribe" style="margin-bottom:9px" />
-                        <div style="height:35px" id="general-response">
-                        </div>
-                    </form>
-
-                    <div class="fb-like" data-href="https://www.facebook.com/koopmode" data-send="false" data-width="250" data-show-faces="false" data-font="verdana" data-colorscheme="dark"></div>
-                    <div class="bottom-xsmall-spacer"></div>
-                    <a href="https://twitter.com/koopmode" onClick="_gaq.push(['_trackEvent', 'Social', 'click', 'FollowTwitter']);" class="twitter-follow-button" data-show-count="false">Follow @koopmode</a>
-                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                 </div>
             </div>
         </div>
