--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
             </div>
 
-            <div class="row bottom-large-spacer hidden-phone">
+            <div class="row bottom-large-spacer top-med-spacer hidden-phone">
                 <div class="span12 top-small-spacer" align="center">
                     <a href="http://kfv.ko-opmode.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'KFV']);" ><img alt="Kung Fu Volleyball. Play Now" src="/images/playnow.png" class="ignore-resize"/></a>
                 </div>
