Fixed ipad menu

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                     <img alt="Ko-op" src="/images/ko-op.png" class="right-small-spacer" style="float:left;" width="64px" />
                 </div>
 
-                <div class="offset1 span8 top-small-spacer">
-                    <iframe align="center" width="100%" height="429" src="http://www.youtube.com/embed/I7m3aASq8T0?rel=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>
+                <div class="span8 offset1 top-small-spacer">
+                    <iframe width="100%" height="429" src="http://www.youtube.com/embed/I7m3aASq8T0?rel=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
 
                 <div class="span2" style="text-align:right;">
-                    <a href="#Games" style="margin-right:0px">Games</a>
-                    <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" style="margin-left:16px">Blog</a>
+                    <a href="#Games" style="margin-right:0px; font-size:16px">Games</a>
+                    <a href="http://koopmodeblog.tumblr.com/" onClick="_gaq.push(['_trackEvent', 'Links', 'click', 'Blog']);" style="margin-left:12px; font-size:16px;">Blog</a>
                 </div>
             </div>
 
